--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+:root {
+   /* colors */
+   --white: hsl(0, 0%, 100%);
+   --orange: hsl(25, 97%, 53%);
+   --light-gray: hsl(217, 12%, 63%);
+   --grayish-blue: hsl(220, 15%, 55%);
+   --dark-blue: hsl(218, 44%, 22%);
+   --very-dark-blue: hsl(216, 12%, 8%);
+   --medium-grey: hsl(216, 12%, 54%);
+
+   /* font */
+   --font-family-overpass: 'Overpass', sans-serif;
+   --font-fam-outfit: "Outfit", sans-serif;
+   --font-fam-spacemono: "Space Mono", monospace;
+   --font-size-10: 62.5%; /* 10px */
+   --font-weight-400: 400;
+   --font-weight-500: 500;
+   --font-weight-700: 700;
 }
