--- a/src/Components/ThankYouCard/thankyoucard.module.css
+++ b/src/Components/ThankYouCard/thankyoucard.module.css
@@ -4,6 +4,7 @@
   height: 22rem;
   width: 22rem;
   background-color: var(--very-dark-blue);
+  margin-top:10px;
 }
 
 .mainImg{
@@ -13,8 +14,25 @@
 }
 .result{
   font-size: 15px;
+  font-weight: 400;
+  text-align: center;
   padding: 5px 10px;
   color: var(--orange);
   background-color:hsl(213, 19%, 18%) ;
    border-radius: 3rem;
+}
+
+.thankYou{
+  font-weight: var(--font-weight-700);
+  text-align:center;
+  color:white;
+}
+
+.thankYouContent{
+  font-size: 12px;
+  font-weight: 400;
+  text-align:center;
+  color:hsl(216, 12%, 54%);
+  
+  
 }
