--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(177, 160, 160);
+  background-color: black;
 }
 
 code {
