--- a/src/Components/FormCard/formcard.module.css
+++ b/src/Components/FormCard/formcard.module.css
@@ -9,6 +9,7 @@ html {
   height: 22rem;
   width: 22rem;
   background-color: var(--very-dark-blue);
+ 
 
 }
 .starBtn {
@@ -73,4 +74,8 @@ html {
 .buttonSubmit:hover {
   background-color: var(--white);
   color: var(--orange);
+}
+
+.component{
+  margin-top: 2rem;
 }
